--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
         <link rel="icon" href="img/logo.png" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
-        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-        <script src="javascript.js"></script>
     </head>
     <body>
         <header>
@@ -524,7 +522,7 @@
                                 <div class="row g-3">
                                     <div class="col-md-6">
                                         <div class="form-floating">
-                                            <input type="text" class="form-control" id="name" placeholder="" autocomplete="name" />
+                                            <input type="text" class="form-control" id="username" placeholder="" autocomplete="name" />
                                             <label for="name">Nama</label>
                                         </div>
                                     </div>
@@ -536,21 +534,39 @@
                                     </div>
                                     <div class="col-12">
                                         <div class="form-floating">
-                                            <input type="text" class="form-control" id="subject" placeholder="" />
-                                            <label for="subject">Subject</label>
+                                            <input type="text" class="form-control" id="subjek" placeholder="" />
+                                            <label for="subjek">Subject</label>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="form-floating">
-                                            <textarea class="form-control" placeholder="" id="message"></textarea>
-                                            <label for="message">Pesan</label>
+                                            <textarea class="form-control" placeholder="" id="pesan"></textarea>
+                                            <label for="pesan">Pesan</label>
                                         </div>
                                     </div>
                                     <div class="col-md-6 mb-4">
-                                        <button type="button" class="btn btn-outline-success">Kirim</button>
+                                        <button type="button" class="btn btn-outline-success" onclick="SendMail()">Kirim</button>
                                     </div>
                                 </div>
                             </form>
+                            <!-- Modal Start -->
+                            <div class="modal" id="myModal" tabindex="-1">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title">Status Pesan</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p id="modalMessage"></p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-outline-success" data-bs-dismiss="modal">OK</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal End -->
                         </div>
                         <div class="col-lg-6">        
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.1310679308162!2d110.5396425!3d-7.5606854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a69106bae2ec9%3A0xd92fe13c55fbc595!2sUD%20Putri%20Mandiri!5e0!3m2!1sid!2sid!4v1710919847944!5m2!1sid!2sid" allowfullscreen="true" loading="lazy" id="iframe-maps" referrerpolicy="no-referrer-when-downgrade"></iframe>                        </div>
@@ -617,5 +633,16 @@
 
         <script src="https://kit.fontawesome.com/1e948c2aab.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+        <script type="text/javascript">
+            (function(){
+                emailjs.init({
+                publicKey: "I9irVaXphDtfmrYdE",
+                });
+            })();
+        </script>
+        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+        <script src="javascript.js"></script>
+        <!-- <script src="kontak.js"></script> -->
     </body>
 </html>
