--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <!-- Navbar -->
+            <!-- Navbar Start -->
             <nav class="navbar navbar-expand-lg sticky-top">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
@@ -38,8 +38,8 @@
                     </div>
                 </div>
             </nav>
+            <!-- Navbar End -->
         </header>
-
         <main>
             <!-- Carousel Start -->
             <div id="carousel" class="carousel slide" data-bs-ride="carousel">
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <!-- About End -->
-            <!-- produk -->
+            <!-- Produk Start-->
             <div class="container-fluid py-5" id="produk">
                 <div class="container">
                     <div class="tab-class">
@@ -472,7 +472,7 @@
                     </div>
                 </div>
             </div>
-            <!-- produk end -->
+            <!-- produk End -->
 
             <!-- Contact Start -->
             <div class="container-fluid py-5" id="kontak">
@@ -481,17 +481,6 @@
                         <h2 class="display-6">Kontak Kami</h2>
                     </div>
                     <div class="row g-5 mb-5 rowkontak">
-                        <!-- <div class="row col-md-4">
-                            <div class="col-4 social">
-                                <a href="https://www.facebook.com/people/Syarif-Saputra/100008714533103/?mibextid=WC7FNe" alt="Facebook anak pemilik usaha"><i class="fa-brands fa-square-facebook custom-icon"></i></a>
-                            </div>
-                            <div class="col-4 social">
-                                <a href="https://www.instagram.com/syarif_saputra31/"alt="instagram anak pemilik usaha"><i class="fa-brands fa-square-instagram custom-icon"></i></a>
-                            </div>
-                            <div class="col-4 social">
-                                <a href="https://api.whatsapp.com/send/?phone=6289618434910&text&type=phone_number&app_absent=0" alt="no wa anak pemilik usaha"><i class="fa-brands fa-square-whatsapp custom-icon"></i></a>
-                            </div>
-                        </div> -->
                         <div class="col-md-4 text-center">
                             <div class="btn-square mx-auto mb-3 social">
                                 <a href="https://www.instagram.com/syarif_saputra31/"><i class="fa-brands fa-square-instagram custom-icon"></i></a>
@@ -558,7 +547,7 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            <p id="modalMessage"></p>
+                                            <p id="modalMessage">Pesan Anda Sudah Terkirim!</p>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-outline-success" data-bs-dismiss="modal">OK</button>
@@ -576,7 +565,6 @@
             </div>
             <!-- Contact End -->
         </main>
-
         <footer>
             <!-- Footer Start -->
             <div class="container-fluid footer mt-5"">
@@ -620,19 +608,19 @@
             <!-- Copyright Start -->
             <div class="container-fluid copyright py-3">
                 <div class="container">
-                    <!-- <div class="row justify-content-center align-items-center"> -->
                         <div class="copyright2 my-1">
                             copyright&copy; 2024 Mini Project Kelompok 5 Kelas Fullstack #4
                         </div>
-                    <!-- </div> -->
                 </div>
             </div>
             <!-- Copyright End -->
             <!-- Footer End -->
         </footer>
-
+        <!-- Script -->
         <script src="https://kit.fontawesome.com/1e948c2aab.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+        <script src="javascript.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
         <script type="text/javascript">
             (function(){
@@ -641,8 +629,5 @@
                 });
             })();
         </script>
-        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-        <script src="javascript.js"></script>
-        <!-- <script src="kontak.js"></script> -->
     </body>
 </html>
