menambahkan if pada javascript

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                                 <a href="https://www.instagram.com/syarif_saputra31/"><i class="fa-brands fa-square-instagram custom-icon"></i></a>
                             </div>
                             <p class="mb-2">Instagram</p>
-                            <p class="mb-0">@miniproject_k5</p>
+                            <p class="mb-0">@syarif_saputra31</p>
                         </div>
                         <div class="col-md-4 text-center">
                             <div class="btn-square mx-auto mb-3 social">
@@ -511,25 +511,25 @@
                                 <div class="row g-3">
                                     <div class="col-md-6">
                                         <div class="form-floating">
-                                            <input type="text" class="form-control" id="username" placeholder="" autocomplete="name" />
+                                            <input type="text" class="form-control" id="username" placeholder="" autocomplete="name" required/>
                                             <label for="name">Nama</label>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-floating">
-                                            <input type="email" class="form-control" id="email" placeholder="" autocomplete="email"/>
+                                            <input type="email" class="form-control" id="email" placeholder="" autocomplete="email" required/>
                                             <label for="email">Email</label>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="form-floating">
-                                            <input type="text" class="form-control" id="subjek" placeholder="" />
+                                            <input type="text" class="form-control" id="subjek" placeholder="" required/>
                                             <label for="subjek">Subject</label>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="form-floating">
-                                            <textarea class="form-control" placeholder="" id="pesan"></textarea>
+                                            <textarea class="form-control" placeholder="" id="pesan" required></textarea>
                                             <label for="pesan">Pesan</label>
                                         </div>
                                     </div>
