--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
         </main>
         <footer>
             <!-- Footer Start -->
-            <div class="container-fluid footer mt-5"">
+            <div class="container-fluid footer mt-5">
                 <div class="container py-3">
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
