--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Tugas Praktik#5 - Kelompok 5 Fullstack#4</title>
+        <title>Tugas Akhir - Kelompok 5 Fullstack#4</title>
         <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
         <link rel="icon" href="img/logo.png" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -42,53 +42,55 @@
         </header>
         <main>
             <!-- Carousel Start -->
-            <div id="carousel" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <section class="banner">
+                <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item c-item active">
+                            <img src="img/banner1.png" class="d-block w-100 c-img" alt="...">
+                            <div class="carousel-caption">
+                                <h4>Selamat Datang di Website</h4>
+                                <h5 class="caption1">UD Putri Mandiri</h5>
+                                <a href="#tentangkami" class="btn btn-light">Selengkapnya</a>
+                            </div>
+                        </div>
+                        <div class="carousel-item c-item">
+                            <img src="img/banner2.jpg" class="d-block w-100 c-img" alt="...">
+                            <div class="carousel-caption">
+                                <h5>UD Putri Mandiri</h5>
+                                <p class="caption2">
+                                    Pelopor rempah-rempah di Dusun II, Ringinlarik, Kec. Musuk, Kabupaten Boyolali, Jawa Tengah 57331.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item c-item">
+                            <img src="img/banner3.jpeg" class="d-block w-100 c-img" alt="...">
+                            <div class="carousel-caption">
+                                <h5>UD Putri Mandiri</h5>
+                                <p class="caption3">
+                                    Memiliki beberapa kategori rempah-rempah sesuai kebutuhan anda.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/banner1.png" class="d-block w-100 c-img" alt="...">
-                        <div class="carousel-caption">
-                            <h4>Selamat Datang di Website</h4>
-                            <h5 class="caption1">UD Putri Mandiri</h5>
-                            <a href="#tentangkami" class="btn btn-light">Selengkapnya</a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/banner2.jpg" class="d-block w-100 c-img" alt="...">
-                        <div class="carousel-caption">
-                            <h5>UD Putri Mandiri</h5>
-                            <p class="caption2">
-                                Pelopor rempah-rempah di Dusun II, Ringinlarik, Kec. Musuk, Kabupaten Boyolali, Jawa Tengah 57331.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/banner3.jpeg" class="d-block w-100 c-img" alt="...">
-                        <div class="carousel-caption">
-                            <h5>UD Putri Mandiri</h5>
-                            <p class="caption3">
-                                Memiliki beberapa kategori rempah-rempah sesuai kebutuhan anda.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
+            </section>
             <!-- Carousel End -->
             <!-- About Start -->
-            <div class="container-fluid py-5" id="tentangkami">
-                <div class="container">
+            <section class="about">
+                <div class="container py-5" id="tentangkami">
                     <div class="row">
                         <h2 class="text-center mb-5 display-6">Tentang Kami</h2>
                         <div class="col-lg-6">
@@ -109,14 +111,71 @@
                                 <p style="text-align: justify;">UD Putri Mandiri  berkomitmen untuk menyajikan produk berkualitas tinggi sesuai kebutuhan anda</p>
                             </div>
                         </div>
-                    </div>
-                    
+                    </div>    
                 </div>
-            </div>
+            </section>
             <!-- About End -->
+            <!-- Why Us Start -->
+            <section class="whyus">
+                <div class="container mb-5">
+                    <div class="row d-flex justify-content-center">
+                        <div class="text-center">
+                            <h2 class="display-6 mb-4">Mengapa Memilih Kami?</h2>
+                            <p class="mb-4">
+                                UD Putri Mandiri, sumber terpercaya sejak 2022 untuk rempah-rempah terbaik. Dibangun dari pengalaman dan dedikasi, kami berkomitmen menyediakan informasi akurat dan bermanfaat tentang bumbu dapur, pengobatan, dan wewangian sesuai kebutuhan Anda!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row text-center d-flex align-items-stretch">
+                        <div class="col-md-4 mb-5 mb-md-0 d-flex align-items-stretch">
+                            <div class="card testimonial-card">
+                                <div class="card-body">
+                                    <div class="btn-square mx-auto mb-3 social">
+                                        <i class="fa-solid fa-circle-check custom-icon"></i>
+                                    </div>                                
+                                    <hr/>
+                                    <h5>Pilihan Beragam</h5>
+                                    <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pe-2"></i>
+                                        Menyediakan beragam produk untuk memenuhi kebutuhan Anda!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-5 mb-md-0 d-flex align-items-stretch">
+                            <div class="card testimonial-card">
+                                <div class="card-body">
+                                    <div class="btn-square mx-auto mb-3 social">
+                                        <i class="fa-solid fa-hand-holding-heart custom-icon"></i>
+                                    </div>                                
+                                    <hr/>
+                                    <h5>Produk Berkualitas </h5>
+                                    <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pe-2"></i>
+                                        Produk kami memiliki kualitas untuk memnuhi kebutuhan Anda!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-5 mb-md-0 d-flex align-items-stretch">
+                            <div class="card testimonial-card">
+                                <div class="card-body">
+                                    <div class="btn-square mx-auto mb-3 social">
+                                        <i class="fa-solid fa-seedling custom-icon"></i>
+                                    </div>                                
+                                    <hr/>
+                                    <h5>Dari Petani Lokal</h5>
+                                    <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pe-2"></i>
+                                        Rempah berasal dari petani lokal yang sudah teruji kualitasnya!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Why Us End-->
             <!-- Produk Start-->
-            <div class="container-fluid py-5" id="produk">
-                <div class="container">
+            <section class="product">
+                <div class="container py-5" id="produk">
                     <div class="tab-class">
                         <div class="row">
                             <div class="col-lg-4 mb-3 text-start">
@@ -470,13 +529,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <!-- produk End -->
-
+                </div>                
+            </section>
+            <!-- Produk End -->
+            
             <!-- Contact Start -->
-            <div class="container-fluid py-5" id="kontak">
-                <div class="container">
+            <section class="contact">
+                <div class="container py-5" id="kontak">
                     <div class="section-title text-center">
                         <h2 class="display-6">Kontak Kami</h2>
                     </div>
@@ -562,7 +621,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <!-- Contact End -->
         </main>
         <footer>
