FIX BANGET PART 2

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                                         <div class="col-md-6">
                                             <div class="form-floating">
                                                 <input type="text" class="form-control" id="username" placeholder="" autocomplete="name" required/>
-                                                <label for="name">Nama</label>
+                                                <label for="username">Nama</label>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
